# plangen

./: LICENSE  README.md  example.json  main.py  pyproject.toml  requirements.txt  sboag-beantown-plan.yaml  training_plan.xlsx
.github/: copilot-instructions.md
plangen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
