[project]
name = "plangen"
version = "0.1.0"
description = "A Python project that processes JSON and outputs a spreadsheet-compatible file for Google Sheets."
authors = [
    { name = "Scott Boag", email = "sboagy@gmail.com" }
]
requires-python = ">=3.8"
# dependencies = [
#     "pandas>=2.2.2",
#     "openpyxl>=3.1.2"
# ]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
